<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sample.movienews.SearchFragment">

    <data>
        <variable
            name="viewModel"
            type="com.sample.movienews.viewModel.MainViewModel"
            />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@null">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/search_field_on_focus"
            app:closeIcon="@drawable/ic_close"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_movie_field_hint"
            app:searchIcon="@drawable/ic_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_searched_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sv_movie_name"
            android:layout_marginTop="@dimen/_5dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="ifContentScrolls"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:moviesData="@{viewModel.searchMovie}"
            app:spanCount="@integer/span_count"
            tools:listitem="@layout/home_linear_view_item" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_movie_info_text"
            android:textColor="@color/gray_500"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/movies_status"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            app:searchedMovieApiStatus="@{viewModel.searchedMovieStatus}"
            android:contentDescription="@string/searched_movie_content_description"
            android:visibility="gone"
            />

    </RelativeLayout>


</layout>